<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Producer.LoginFragment">
    <Button
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/LoginButton"
        android:text="@string/LoginButton"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/UserNameEditText"
                android:gravity="center"
                android:hint="@string/RegisterUsername"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/UserEmailEditText"
                android:gravity="center"
                android:hint="@string/RegisterEmail"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/UserPasswordEditText"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/RegisterPassword"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/RegisterButton"
            android:text="@string/RegisterButton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>