<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/Upload"
        android:text="@string/Upload"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/Red"
            android:id="@+id/DisplayErrorTextView"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="20dp"
            android:background="@drawable/border_bottom__gray"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_weight="20"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/LanguageSpinner"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/Add"
                android:layout_weight="10"
                android:textColor="@color/purple_700"
                android:text="@string/Add"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="70"
                android:id="@+id/SelectedLanguages"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/VideoTitle"
            android:padding="20dp"
            android:hint="@string/VideoTitle"
            android:background="@drawable/border_bottom__gray"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/VideoUrl"
                android:hint="@string/YouTubeUrl"
                android:padding="20dp"
                android:background="@drawable/border_bottom__gray"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/PasteButton"
                android:textColor="@color/purple_700"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/PasteContent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@drawable/border_bottom__gray"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/AttachFile"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/UploadSubtitle"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="40dp"
                android:id="@+id/AttachFile"
                android:src="@drawable/ic_baseline_attach_file_24"
                android:layout_height="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/AttachedFileName"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>